--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="al">Manage Employees</string>
+    <string name="title_activity_emp_status">Emp_status</string>
 </resources>
